Stop header from shrinking too much

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ h2,
     color: #fff;
     height: var(--navbar-height);
     /*This is important. Please don't remove it. It will mess with the footer and the margin*/
+    min-height: 90px;
     animation-name: colorAnimation;
     animation-duration: 10s;
     animation-iteration-count: infinite;
@@ -154,6 +155,7 @@ CAN ANYONE MAKE IT SO THAT IT CATCHES COLOUR AS WE SCROLL DOWN THE PAGE?
     /*	margin: 0px -4rem 0 auto !important;*/
     text-align: center;
     grid-template-columns: repeat(5, 1fr);
+    align-items: center;
 }
 
 .navbar-expand-md .navbar-nav .nav-link {
@@ -309,6 +311,9 @@ video {
 }
 
 @media (max-width: 768px) {
+    .navbar-nav {
+        align-items: stretch;
+    }
     .navbar-nav.ml-auto {
         margin-right: auto;
     }
